# TrueOrigin

./: .gitignore  .repomixignore  README.md  SIMULATION_GUIDE.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.md  repomix-output-backend.xml  repomix-output.xml  repomix.config.json
.cursor/rules/: debugging_strategies.mdc  docs_and_commenting.mdc  icp-api-conventions.mdc  icp.mdc  logging.mdc  read_this_first.mdc
.cursor/rules/backend/: backend-general-expert.mdc
.cursor/rules/core/: environment-variables.mdc  readme-md.mdc  security.mdc
.cursor/rules/frontend/: accessibility-rules.mdc  code-organization-rules.mdc  general-ui-ux-rules.mdc  mobile-first-design-rules.mdc  react.mdc  tailwind.mdc  (+9 more)
plans/: aa.md  backend.md  bug.md  design.md  diagram.md  frontend.md  new.be.plan.md  new.fe.plan.md  temp.plan.md
scripts/: task-complexity-report.json
src/backend/: Cargo.toml  README.md  architecture.md  backend.did
src/backend/src/: api.rs  auth.rs  error.rs  global_state.rs  icp.rs  lib.rs  models.rs  rate_limiter.rs  rewards.rs  storage.rs  utils.rs
src/backend/src/service/: mod.rs  organization_service.rs  product_service.rs  reseller_service.rs  user_service.rs  verification_service.rs
src/frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json  tasks.json.bak
(+90 files in other folders)
