[package]
name = "TrustOrigin_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "=1.0.1"
time = { version = "0.3", features = ["macros"] }
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
lazy_static = "1.4.0"
sha2 = "0.10"
rand = "0.8.5"
hex = "0.4.3"
k256 = "0.13.3"
getrandom = { version = "0.2", features = ["custom"] }
futures = "0.3"
